--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 spring:
   application:
     name: client
-  profiles:
-    active: development
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config
 
 management:
   security:
