--- a/config/src/main/resources/bootstrap.yml
+++ b/config/src/main/resources/bootstrap.yml
@@ -2,6 +2,8 @@ server:
   port: 8888
 
 spring:
+  application:
+    name: config
   cloud:
     config:
       server:
@@ -12,22 +14,7 @@ management:
   security:
     enabled: false
 
-
-#spring:
-#  application:
-#    name: config
-#  profiles:
-#    active: native
-##  cloud:
-##    config:
-##      server:
-##        native:
-##          searchLocations: classpath:/configs/
-#
-##spring.cloud.config.server.git.uri=https://github.com/ErmolaevAM/cloud-config.git
-##management.security.enabled=false
-#
-##server.port=8888
-##spring.application.name=config
-##spring.profiles.active=native
-##spring.cloud.config.server.native.searchLocations=
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
