--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>config</module>
         <module>client</module>
+        <module>eureka</module>
     </modules>
 
 
