--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>client</module>
         <module>eureka</module>
         <module>elite</module>
+        <module>gateway</module>
     </modules>
 
 
