--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,6 +7,8 @@
     <groupId>spring.microservices.cloud</groupId>
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -59,6 +61,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>client</finalName>
     </build>
     
 </project>
