--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: client
@@ -8,3 +11,7 @@ spring:
 management:
   security:
     enabled: false
+
+ribbon:
+  eureka:
+    enabled: true
