--- a/config/pom.xml
+++ b/config/pom.xml
@@ -7,6 +7,8 @@
     <groupId>spring.microservices.cloud</groupId>
     <artifactId>config</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -57,6 +59,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>config</finalName>
     </build>
 
 </project>
