--- a/elite/pom.xml
+++ b/elite/pom.xml
@@ -7,6 +7,7 @@
     <groupId>spring.microservices.cloud</groupId>
     <artifactId>elite</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -59,6 +60,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>elite</finalName>
     </build>
 
 </project>
