--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -7,6 +7,7 @@
     <groupId>spring.microservices.cloud</groupId>
     <artifactId>eureka</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -47,6 +48,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>eureka</finalName>
     </build>
 
 
