--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,32 +1,22 @@
 server:
   port: 8762
 
-spring:
-  application:
-    name: zuul
-
-eureka:
-  instance:
-    preferIpAddress:
-      true
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-  serviceurl:
-    defaultzone: http://localhost:8761/eureka/
-
 zuul:
   routes:
-    elite:
-      path: /elite/**
-      serviceId: elite
     client:
       path: /client/**
       serviceId: client
-    config:
-      path: /config/**
-      serviceId: config
+    elite:
+      path: /elite/**
+      serviceId: elite
+
 
 ribbon:
   eureka:
-    enabled: false
+    enabled: true
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    registerWithEureka: false
