--- a/config/src/main/resources/bootstrap.yml
+++ b/config/src/main/resources/bootstrap.yml
@@ -10,11 +10,7 @@ spring:
         git:
           uri: https://github.com/ErmolaevAM/config-server-repo
 
-management:
-  security:
-    enabled: false
-
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+      defaultZone: http://localhost:8761/eureka
