--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8762
 
+spring:
+  application:
+    name: gateway
+
 zuul:
   routes:
     client:
@@ -9,6 +13,9 @@ zuul:
     elite:
       path: /elite/**
       serviceId: elite
+    config:
+      path: /config/**
+      serviceId: config
 
 ribbon:
   eureka:
@@ -18,4 +25,3 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-    registerWithEureka: false
