--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
@@ -11,3 +11,13 @@ spring:
 ribbon:
   eureka:
     enabled: true
+logging:
+  level:
+    org.springframework.cloud: ERROR
+    spring.microservices.cloud.client: INFO
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} %-5level - %msg%n"
+  file: client/src/main/resources/client_application.log
+
+
+
